fixe task colliding together due to limited height when too much words is entered

--- a/timer/src/App.css
+++ b/timer/src/App.css
@@ -8,6 +8,8 @@ body {
   background: linear-gradient(to right, #BD3F32, #CB356B);*/
   background: url("./imgs/session-work.jpg") no-repeat center fixed;
   background-size: cover;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 .backgroundNum_0 {
   background: url("./imgs/session-work.jpg") no-repeat center fixed;
@@ -38,7 +40,7 @@ body {
 
 @media (max-width: 400px) {
   #pomodoro_timer {
-    margin: 10% 2%;
+    margin: 100px 100px;
   }
 }
 
